--- a/app/index-async.html.template
+++ b/app/index-async.html.template
@@ -32,7 +32,7 @@
       'js/directives.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['wcCalculator']);
     });
   </script>
   <title>My AngularJS App</title>
